Adjusted the media queries to account for the <main> container size at larger resolutions which would originally cause content to break. Furthermore, adjusted the bottom margin of the <main> container to ensure that the footer does not bleed into the container.

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ main {
     width: 21%;
     border-style: clear;
     border-radius: 20px;
+    margin-bottom: 20px;
 }
 img {
     width: 100%;
@@ -111,7 +112,11 @@ td {
     position: fixed;
     bottom: 0;
 }
-
+@media (max-width: 2800px) {
+    main {
+        height: fit-content;
+    }
+}
 @media (max-width: 2200px) {
     h1 {
         font-size: 1.3rem;
